# RAGGA

./: .gitignore  LICENSE  README.md  config.yaml  model.py  model_tests.py  pyproject.toml  report.csv  requirements-core.txt  requirements-cpu.txt  requirements-eval.txt  requirements-gpu.txt  requirements.txt  tinyllama_example.py
reports/: rankings_2024-01-30_195244.csv  report_2024-01-24_094330_cleaned.csv  timings.csv
scripts/: 01_remove_null_chars.py  02_stats.py  03_rank_output.py  04_subj_rank_results.py  rank_output.py  stats.py
src/: model.py
src/ragga/: __about__.py  __init__.py  config.yaml  model.py
src/ragga/core/: config.py  dispatch.py  io.py
src/ragga/crafting/: commands.py  prompt.py
src/ragga/dataset/: dataset.py  loader.py
src/ragga/pipeline/: config.py  documents.py  encoder.py  generation.py
src/ragga/web/: search.py
