[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "ragga"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = 'Retrieval Augmented Generation (RAG) - General Assistant'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "zeyus (https://github.com/zeyus, https://zeyus.com/)" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Education :: Computer Aided Instruction (CAI)",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Human Machine Interfaces",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Utilities",
  "Typing :: Typed",

]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements-core.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
cpu = ["requirements-cpu.txt"]
gpu = ["requirements-gpu.txt"]
eval = ["requirements-eval.txt"]

[project.urls]
Documentation = "https://github.com/zeyus/RAGGA/blob/main/README.md"
Issues = "https://github.com/zeyus/RAGGA/issues"
Source = "https://github.com/zeyus/RAGGA"

[tool.hatch.version]
path = "src/ragga/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.env-vars]
# PIP_INDEX_URL = "https://download.pytorch.org/whl/nightly/cu121" # windows gpu
PIP_INDEX_URL = "" # windows cpu, linux gpu, all mac
# PIP_INDEX_URL = "https://download.pytorch.org/whl/cpu" # linux cpu
PIP_PRE = "1"

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.12.1",
  "git+https://github.com/stdedos/data-science-types",
  "mypy>=1.7.2",
  "pandas-stubs>=2.1.4",
  "ruff>=0.1.14",
  "types-PyYaml",
  "types-requests",
  "types-beautifulsoup4",
  "types-seaborn",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/ragga tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py311"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py311"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["ragga"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["ragga", "tests"]
branch = true
parallel = true
omit = [
  "src/ragga/__about__.py",
]

[tool.coverage.paths]
ragga = ["src/ragga", "*/ragga/src/ragga"]
tests = ["tests", "*/ragga/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
